Revert "Fix: text-button overflow"
7b814a4722ba067b1a6b577bddb4741b63b21791

--- a/components/EditItem/EditItem.module.css
+++ b/components/EditItem/EditItem.module.css
@@ -1,4 +1,4 @@
 .button {
+  position: absolute;
   inset-inline-end: var(--size-2);
-  margin-block: -0.5rem;
 }
